# faststat

./: .gitignore  CMakeLists.txt  README.md  faststat.c  faststat.h  main.c
